@@ -26,6 +26,9 @@
  * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  * $Log: tl880kern.c,v $
+ * Revision 1.26  2007/03/29 09:27:40  nitrogen
+ * Tweaked mkdev scripts, improved MSP init, new tool, improved tools makefile, more docs.
+ *
  * Revision 1.25  2007/03/29 09:01:20  nitrogen
  * Partial MSP init now working, with correct sequence (after MSP3400 I2C attach)
  *
@@ -125,10 +128,11 @@ static void tl880_log_status(void)
 		printk(KERN_INFO "tl880: \t    TSD:   %3ld\n", list->tsd_count);
 		printk(KERN_INFO "tl880: \t    Total: %3ld\n", list->int_count);
 		printk(KERN_INFO "tl880: \t  VPX info:\n");
-		printk(KERN_INFO "tl880: \t    I2C Addr:      %2d\n", list->vpx_addr);
+		printk(KERN_INFO "tl880: \t    I2C Addr:      %2x\n", list->vpx_addr);
 		printk(KERN_INFO "tl880: \t    I2C Bus:       %2d\n", list->vpx_i2cbus);
+		printk(KERN_INFO "tl880: \t    I2C Client ID: %2d\n", list->vpx_i2cclient);
 		printk(KERN_INFO "tl880: \t  MSP info:\n");
-		printk(KERN_INFO "tl880: \t    I2C Addr:      %2d\n", list->msp_addr);
+		printk(KERN_INFO "tl880: \t    I2C Addr:      %2x\n", list->msp_addr);
 		printk(KERN_INFO "tl880: \t    I2C Bus:       %2d\n", list->msp_i2cbus);
 		printk(KERN_INFO "tl880: \t    I2C Client ID: %2d\n", list->msp_i2cclient);
 		list = list->next;
@@ -627,6 +631,7 @@ static struct tl880_dev *tl880_create_dev(void)
 	/** Video chip state */
 	tl880dev->vpx_addr = 0;
 	tl880dev->vpx_i2cbus = 0;
+	tl880dev->vpx_i2cclient = -1;
 	tl880dev->vpx_video_standard = 0;
 
 	return tl880dev;
