@@ -1,46 +1,99 @@
-all:
+all: randram striperam setalpha rampram regload regdump memdump memload memloadswab \
+	memset readmem writemem readreg writereg setbits write4reg randreg iocsetvip \
+	iocreadreg iocwritereg iocsetgpio cursor rgb2ypbpr ioccursor randosd osdtest \
+	osdimage hexcount ioctl channel scripts
+
+randram: randram.c
 	gcc -std=gnu99 -Os -Wall randram.c -o randram -ggdb3
+
+striperam: striperam.c
 	gcc -std=gnu99 -Os -Wall striperam.c -o striperam -ggdb3
+
+setalpha: setalpha.c
 	gcc -std=gnu99 -Os -Wall setalpha.c -o setalpha -ggdb3
+
+rampram: rampram.c
 	gcc -std=gnu99 -Os -Wall rampram.c -o rampram -ggdb3
+
+regload: regload.c
 	gcc -std=gnu99 -Os -Wall regload.c -o regload -ggdb3
+
+regdump: regdump.c
 	gcc -std=gnu99 -Os -Wall regdump.c -o regdump -ggdb3
+
+memdump: memdump.c
 	gcc -std=gnu99 -Os -Wall memdump.c -o memdump -ggdb3
+
+memload: memload.c
 	gcc -std=gnu99 -Os -Wall memload.c -o memload -ggdb3
+
+memloadswab: memloadswab.c
 	gcc -std=gnu99 -Os -Wall memloadswab.c -o memloadswab -ggdb3
-	
+
+memset: memset.c
 	gcc -std=gnu99 -Os -Wall memset.c -o memset -ggdb3
 	
+readmem: readmem.c
 	gcc -std=gnu99 -Os -Wall readmem.c -o readmem -ggdb3
+
+writemem: writemem.c
 	gcc -std=gnu99 -Os -Wall writemem.c -o writemem -ggdb3
-	
+
+readreg: readreg.c
 	gcc -std=gnu99 -Os -Wall readreg.c -o readreg -ggdb3
+
+writereg: writereg.c
 	gcc -std=gnu99 -Os -Wall writereg.c -o writereg -ggdb3
+
+setbits: setbits.c
 	gcc -std=gnu99 -Os -Wall setbits.c -o setbits -ggdb3
+
+write4reg: write4reg.c
 	gcc -std=gnu99 -Os -Wall write4reg.c -o write4reg -ggdb3
 	
+randreg: randreg.c
 	gcc -std=gnu99 -Os -Wall randreg.c -o randreg -ggdb3
-	
+
+iocsetvip: iocsetvip.c
 	gcc -std=gnu99 -Os -Wall iocsetvip.c -o iocsetvip -ggdb3 -I../driver/
+
+iocreadreg: iocreadreg.c
 	gcc -std=gnu99 -Os -Wall iocreadreg.c -o iocreadreg -ggdb3 -I../driver/
+
+iocwritereg: iocwritereg.c
 	gcc -std=gnu99 -Os -Wall iocwritereg.c -o iocwritereg -ggdb3 -I../driver/
-	
+
+iocsetgpio: iocsetgpio.c
 	gcc -std=gnu99 -Os -Wall iocsetgpio.c -o iocsetgpio -ggdb3 -I../driver/
-	
+
+cursor: cursor.c
 	gcc -std=gnu99 -Os -Wall cursor.c -o cursor -ggdb3 -I../driver/
-	
+
+rgb2ypbpr: rgb2ypbpr.c
 	gcc -std=gnu99 -Os -Wall rgb2ypbpr.c -o rgb2ypbpr -ggdb3
-	
+
+ioccursor: ioccursor.c
 	gcc -std=gnu99 -Os -Wall ioccursor.c -o ioccursor -ggdb3 -I../driver/
-	
+
+randosd: randosd.c
 	gcc -std=gnu99 -Os -Wall randosd.c -o randosd -ggdb3 -I../driver/
+
+osdtest: osdtest.c
 	gcc -std=gnu99 -Os -Wall osdtest.c -o osdtest -ggdb3 -I../driver/
+
+osdimage: osdimage.c
 	gcc -std=gnu99 -Os -Wall osdimage.c -o osdimage -ggdb3 -I../driver/
-	
+
+hexcount: hexcount.c
 	gcc -std=gnu99 -Os -Wall hexcount.c -o hexcount -s
-	
-	gcc -std=gnu99 -Os -Wall ioctl.c -o ioctl -ggdb3 -I../driver/ -I/usr/src/linux/include
-	
+
+ioctl: ioctl.c
+	gcc -std=gnu99 -Os -Wall ioctl.c -o ioctl -ggdb3 -I../driver/
+
+channel: channel.c
+	gcc -std=gnu99 -Os -Wall channel.c -o channel -ggdb3 -I../driver/
+
+scripts:
 	chmod +x testdpcint.sh dpc2dump.sh dpc2rand.sh osd.sh \
 		testioctl.sh
 
@@ -49,10 +102,10 @@ clean:
 	writereg iocsetvip iocreadreg iocwritereg cursor rgb2ypbpr \
 	striperam ioccursor randosd osdtest memdump osdimage \
 	memload rampram hexcount readmem writemem randreg setalpha \
-	memloadswab memset iocsetgpio ioctl
+	memloadswab memset iocsetgpio ioctl channel
 
-	make -C dpc clean
-	make -C example clean
-	make -C firmware clean
+#	make -C dpc clean
+#	make -C example clean
+#	make -C firmware clean
 
 
