@@ -1,3 +1,11 @@
+2007-03-29	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
+
+	* Added separate build rules to tools/Makefile for each tool, to speed
+	  rebuilding of a single tool (it's no longer necessary to compile all
+	  of the tools to compile just one).
+	* Added a new tool, channel, to set the tuner frequency.
+	* Added some minimal MSP init code.
+
 2007-03-27	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
 
 	* Finished analyzing set_video_attribute VPX function (still needs a
